syntax = "proto3";

option go_package = "github.com/BirdyDK/DS-handin5";

service Auction {
    rpc Bid(BidRequest) returns (BidResponse);
    rpc Result(ResultRequest) returns (ResultResponse);
    rpc Election(ElectionRequest) returns (ElectionResponse);
    rpc Victory(VictoryRequest) returns (VictoryResponse);
    rpc LeaderMessage (LeaderMessageRequest) returns (LeaderMessageResponse);
}

message BidRequest {
    int32 amount = 1;
}

message BidResponse {
    string status = 1;
}

message ResultRequest {}

message ResultResponse {
    int32 highest_bid = 1;
    string winner = 2;
}

message ElectionRequest {
    int32 node_id = 1;
}

message ElectionResponse {}

message VictoryRequest {
    int32 leader_id = 1;
}

message VictoryResponse {}

message LeaderMessageRequest {
    string message = 1;
}

message LeaderMessageResponse {}
